--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Oh look, a website! Coolcool yes aewesome wooo
+<!DOCTYPE html>
+ <html>
+  <head>
+   <title>Oh look!</title>
+  </head>
+<body>
+
+<h1>This is a webpage!</h1>
+<p>hmm yes coolcool aewesome wooo</p>
+
+</body>
+</html>
