--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a webpage!</h1>
-<p>hmm yes coolcool aewesome wooo</p>
+<h1>Oh look!</h1>
+<p>THis is a webpage! hmm yes coolcool aewesome wooo</p>
 
 </body>
 </html>
