--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Oh look!</title>
+<title>Page Title</title>
 </head>
 <body>
 
 <h1>Oh look!</h1>
-<p>THis is a webpage!
-  hmm yes coolcool aewesome wooo</p>
+<p>THis is a webpage! hmm yes coolcool aewesome wooo</p>
 
 </body>
 </html>
