--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>Oh look!</h1>
-<p>THis is a webpage! hmm yes coolcool aewesome wooo</p>
+<p>This is a webpage! 
+  hmm yes coolcool aewesome wooo</p>
 
 </body>
 </html>
