--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <h1>Oh look!</h1>
 <h2>This is a webpage!</h2>
 <p>hmm yes coolcool aewesome wooo</p>
+  
+  <h3> Have a heading </h3>
+  <p> headings are great. </p>
+  
+  <h4> Have another! </h4>
+  <p> I got plenty of 'em. Don't worry! </p>
+  
+  <h5> Another? </h5>
+  <p> You really like headings, don't you? </p>
+  
+  <h6> OK, this is a bit much. </h6>
+  <p> You alright there? <p>
 
 </body>
 </html>
