--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
   
 <h6>OK, this is a bit much.</h6>
 <p>You alright there?<p>
+  
+<h1>This is a table:</h1>
+<table class="ws-table-all notranslate">
+<tbody><tr>
+<th>Start tag</th>
+<th>Element content</th>
+<th>End tag</th>
+</tr>
+<tr>
+<td>&lt;h1&gt;</td>
+<td>My First Heading</td>
+<td>&lt;/h1&gt;</td>
+</tr>
+<tr>
+<td>&lt;p&gt;</td>
+<td>My first paragraph.</td>
+<td>&lt;/p&gt;</td>
+</tr>
+<tr>
+<td>&lt;br&gt;</td>
+<td><em>none</em></td>
+<td><em>none</em></td>
+</tr>
+</tbody></table>
 
 </body>
 </html>
