--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 <td><em>none</em></td>
 </tr>
 </tbody></table>
+  
+<h2>Here's a link:</h2>
+<a href="https://www.w3schools.com">Visit W3Schools</a>
+
 
 </body>
 </html>
