--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 </tbody></table>
   
 <h2>Here's a link:</h2>
-<a href="https://www.w3schools.com">Visit W3Schools</a>
-
+<a href="https://www.google.com">Go to Google</a>
 
 </body>
 </html>
