--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 </tbody></table>
   
 <h2>Here's a link:</h2>
-<a href="https://www.google.com">Go to Google</a>
+<h4>Just for you!</h4>
+<a href="https://www.google.com">Go to Google NOW</a>
 
 </body>
 </html>
