--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </tbody></table>
   
 <h2>Here's a link:</h2>
-<h4>Just for you!</h4>
+<h4 style="color:gray;">Just for you!</h4>
 <a href="https://www.google.com">Go to Google NOW</a>
 
 </body>
