--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
 <h4 style="color:gray;">Just for you!</h4>
 <a href="https://www.google.com">Go to Google NOW</a>
 
+<b>GO TO GOOGLE NOW</b>
 </body>
 </html>
