--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
 <h4 style="color:gray;">Just for you!</h4>
 <a href="https://www.google.com">Go to Google NOW</a>
 
-<b>GO TO GOOGLE NOW</b>
+<b>You think I can't see you? GO TO GOOGLE. >:(</b>
 </body>
 </html>
