--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
 <a href="https://www.google.com">Go to Google NOW</a>
 
 <b>You think I can't see you? GO TO GOOGLE. >:(</b>
+  
+<small>im sorry for yelling i am srory please dont leave the page polspls :((</small>
 </body>
 </html>
