--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
   
 <small>im sorry for yelling i am srory please dont leave the page polspls :((</small>
   
-<img src="youthinkyouresafe.jpg" alt="You Think You're Safe?">
+<img src="youthinkyouresafe.jfif" alt="You Think You're Safe?">
 </body>
 </html>
