--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@
 <small>im sorry for yelling i am srory please dont leave the page polspls :((</small>
 
 <img src="youthinkyouresafe.jfif" alt="You Think You're Safe?">
+ 
+<input type="checkbox">
 </body>
 </html>
