--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
 <small>im sorry for yelling i am srory please dont leave the page polspls :((</small>
 
 <img src="youthinkyouresafe.jfif" alt="You Think You're Safe?">
- 
-<input type="checkbox">
+
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="tname">THE first name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
 </body>
 </html>
