--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <input type="text" id="fname" name="fname"><br>
   <label for="tname">THE first name:</label><br>
   <input type="text" id="lname" name="lname">
+  <input type="submit">
 </form>
 </body>
 </html>
