--- a/index.html
+++ b/index.html
@@ -62,5 +62,7 @@
   <input type="text" id="lname" name="lname">
   <input type="submit">
 </form>
+  
+<input type="button" onclick="alert('i can see you.')" value="Please click me i am SO LONELY i need friend :c">
 </body>
 </html>
