--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
   <label for="tname">THE first name:</label><br>
-  <input type="text" id="lname" name="lname">
+  <input type="text" id="lname" name="lname" value="His Holiness"><br><br>
   <input type="submit">
 </form>
   
