--- a/index.html
+++ b/index.html
@@ -1,73 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>read me NOW!</title>
+<title>Read me NOW!</title>
 </head>
 <body>
 
-<h1>Oh look!</h1>
-<h2>This is a webpage!</h2>
-<p>hmm yes coolcool aewesome wooo</p>
+<h1>This is a Heading</h1>
+<p>Or is it?</p>
+<h2>This is a Heading</h2>
+<p>Or is it??</p>
+<h3>This is a Heading</h3>
+<p>Or is it???</p>
+<h4>This is a Heading</h4>
+<p>Or is it????</p>
+<h5>This is a Heading</h5>
+<p>Or is it?????</p>
+<h6>This is a Heading</h6>
+<p>Or is it?????</p>
   
-<h3>Have a heading</h3>
-<p>headings are great.</p>
   
-<h4>Have another!</h4>
-<p>I got plenty of 'em. Don't worry!</p>
-  
-<h5>Another?</h5>
-<p>You really like headings, don't you?</p>
-  
-<h6>OK, this is a bit much.</h6>
-<p>You alright there?<p>
-  
-<h1>This is a table:</h1>
-<table class="ws-table-all notranslate">
-<tbody><tr>
-<th>Start tag</th>
-<th>Element content</th>
-<th>End tag</th>
-</tr>
-<tr>
-<td>&lt;h1&gt;</td>
-<td>My First Heading</td>
-<td>&lt;/h1&gt;</td>
-</tr>
-<tr>
-<td>&lt;p&gt;</td>
-<td>My first paragraph.</td>
-<td>&lt;/p&gt;</td>
-</tr>
-<tr>
-<td>&lt;br&gt;</td>
-<td><em>none</em></td>
-<td><em>none</em></td>
-</tr>
-</tbody></table>
-  
-<h2>Here's a link:</h2>
-<h4 style="color:gray;">Just for you!</h4>
-<a href="https://www.google.com">Go to Google NOW</a>
 
-<b>You think I can't see you? GO TO GOOGLE. >:(</b>
-  
-<small>im sorry for yelling i am srory please dont leave the page polspls :((</small>
-
-<img src="youthinkyouresafe.jfif" alt="You Think You're Safe?">
-
-<form>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br>
-  <label for="tname">THE first name:</label><br>
-  <input type="text" id="lname" name="lname"<br>
-  <input type="submit">
-</form>
-  
-<input type="button" onclick="alert('i can see you.')" value="Please click me i am SO LONELY i need friend :c">
-
-<h2>The GREATEST video:</h2>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=b4HT4QJnhmU">
-</iframe>
 </body>
 </html>
+
+
