--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <h6>This is a Heading</h6>
 <p>Or is it?????</p>
   
+<a href="https://darrsala.github.io/BuildASimpleWebsite_Sep02/">Google Link</a>
+<a href="https://www.google.com/">No Don't Listen To That Link, THIS Is The Google Link</a>
   
+<img src="wellPreparedCat" alt="well prepared cat">
 
 </body>
 </html>
