--- a/index.html
+++ b/index.html
@@ -21,8 +21,24 @@
 <a href="https://darrsala.github.io/BuildASimpleWebsite_Sep02/">Google Link</a>
 <a href="https://www.google.com/">No Don't Listen To That Link, THIS Is The Google Link</a>
   
-<img src="wellPreparedCat" alt="well prepared cat">
+<img src="wellPreparedCat.jpg" alt="well prepared cat">
 
+<h3>Things I Can Do (in no particular order):</h3>
+<ul>
+  <li>breathe air</li>
+  <li>make this website</li>
+  <li>witness the inevitable heat death of the universe</li>
+  <li>not my homework</li>
+</ul>
+
+<h3>Things I Can Do (in a particular order):</h3>
+<ol>
+  <li>breathe air hhhh</li>
+  <li>click a button</li>
+  <li>yes!</li>
+  <li>still not my homework</li>
+</ol>
+  
 </body>
 </html>
 
