--- a/index.html
+++ b/index.html
@@ -33,13 +33,34 @@
 
 <h3>Things I Can Do (in a particular order):</h3>
 <ol>
-  <li>breathe air hhhh</li>
+  <li>breathe air hhhhhhh</li>
   <li>click a button</li>
   <li>yes!</li>
   <li>still not my homework</li>
 </ol>
-  
+
+<table>
+  <tr>
+    <th>First Category</th>
+    <th>Second Category</th>
+    <th>Smiles level :)</th>
+  </tr>
+  <tr>
+    <td>[Insert funny option here]</td>
+    <td>[Spontaneous laughter]</td>
+    <td>:)</td>
+  </tr>
+  <tr>
+    <td>California</td>
+    <td>I do not like California (or anyone from California (except you grandma, you're cool))</td>
+    <td>:(</td>
+  </tr>
+  <tr>
+    <td>Green</td>
+    <td>The color green</td>
+    <td>:((((((((((</td>
+  </tr>
+</table>
+
 </body>
 </html>
-
-
