--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <p>Or is it?????</p>
   
 <a href="https://darrsala.github.io/BuildASimpleWebsite_Sep02/">Google Link</a>
+<p> </p>
 <a href="https://www.google.com/">No Don't Listen To That Link, THIS Is The Google Link</a>
+<p> </p>
+<a href="https://trollface.dk/">The REAL Google Link</a>
+<p> </p>
   
 <img src="wellPreparedCat.jpg" alt="well prepared cat">
 
