--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>Or is it?</p>
-<h2>This is a Heading</h2>
-<p>Or is it??</p>
-<h3>This is a Heading</h3>
-<p>Or is it???</p>
-<h4>This is a Heading</h4>
-<p>Or is it????</p>
-<h5>This is a Heading</h5>
-<p>Or is it?????</p>
-<h6>This is a Heading</h6>
-<p>Or is it?????</p>
+<body style="background-color:gainsboro;">
+  
+<h1 style="text-align:center;">This is a Heading</h1>
+<p style="text-align:center;">Or is it?</p>
+<h2 style="text-align:center;">This is a Heading</h2>
+<p style="text-align:center;">Or is it??</p>
+<h3 style="text-align:center;">This is a Heading</h3>
+<p style="text-align:center;">Or is it???</p>
+<h4 style="text-align:center;">This is a Heading</h4>
+<p style="text-align:center;">Or is it????</p>
+<h5 style="text-align:center;">This is a Heading</h5>
+<p style="text-align:center;">Or is it?????</p>
+<h6 style="text-align:center;">This is a Heading</h6>
+<p style="text-align:center;">Or is it?????</p>
   
 <a href="https://darrsala.github.io/BuildASimpleWebsite_Sep02/">Google Link</a>
 <p> </p>
@@ -25,25 +27,25 @@
 <a href="https://trollface.dk/">The REAL Google Link</a>
 <p> </p>
   
-<img src="wellPreparedCat.jpg" alt="well prepared cat">
+<img style="text-align:center;">src="wellPreparedCat.jpg" alt="well prepared cat">
 
-<h3>Things I Can Do (in no particular order):</h3>
-<ul>
+<h3 style="text-align:center;">Things I Can Do (in no particular order):</h3>
+<ul style="text-align:center;">
   <li>breathe air</li>
   <li>make this website</li>
   <li>witness the inevitable heat death of the universe</li>
   <li>not my homework</li>
 </ul>
 
-<h3>Things I Can Do (in a particular order):</h3>
-<ol>
+<h3 style="text-align:center;">Things I Can Do (in a particular order):</h3>
+<ol style="text-align:center;">
   <li>breathe air hhhhhhh</li>
   <li>click a button</li>
   <li>yes!</li>
   <li>still not my homework</li>
 </ol>
 
-<table>
+<table style="text-align:center;">
   <tr>
     <th>First Category</th>
     <th>Second Category</th>
