--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <a href="https://trollface.dk/">The REAL Google Link</a>
 <p> </p>
   
-<img style="text-align:center;">src="wellPreparedCat.jpg" alt="well prepared cat">
+<img src="wellPreparedCat.jpg" alt="well prepared cat">
 
 <h3 style="text-align:center;">Things I Can Do (in no particular order):</h3>
 <ul style="text-align:center;">
