--- a/index.html
+++ b/index.html
@@ -44,24 +44,25 @@
   <li>yes!</li>
   <li>still not my homework</li>
 </ol>
+<p> </p>
 
 <table style="text-align:center;">
-  <tr>
+  <tr style="text-align:center;">
     <th>First Category</th>
     <th>Second Category</th>
     <th>Smiles level :)</th>
   </tr>
-  <tr>
+  <tr style="text-align:center;">
     <td>[Insert funny option here]</td>
     <td>[Spontaneous laughter]</td>
     <td>:)</td>
   </tr>
-  <tr>
+  <tr style="text-align:center;">
     <td>California</td>
     <td>I do not like California (or anyone from California (except you grandma, you're cool))</td>
     <td>:(</td>
   </tr>
-  <tr>
+  <tr style="text-align:center;">
     <td>Green</td>
     <td>The color green</td>
     <td>:((((((((((</td>
