--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   
 <img src="wellPreparedCat.jpg" alt="well prepared cat">
 
-<h3 style="text-align:center;">Things I Can Do (in no particular order):</h3>
-<ul style="text-align:center;">
+<h3>Things I Can Do (in no particular order):</h3>
+<ul>
   <li>breathe air</li>
   <li>make this website</li>
   <li>witness the inevitable heat death of the universe</li>
   <li>not my homework</li>
 </ul>
 
-<h3 style="text-align:center;">Things I Can Do (in a particular order):</h3>
-<ol style="text-align:center;">
+<h3>Things I Can Do (in a particular order):</h3>
+<ol>
   <li>breathe air hhhhhhh</li>
   <li>click a button</li>
   <li>yes!</li>
