--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </tr>
   <tr style="text-align:center;">
     <td>California</td>
-    <td>I do not like California (or anyone from California (except you grandma, you're cool))</td>
+    <td>I do not like California (or anyone from California (except grandma she is cool))</td>
     <td>:(</td>
   </tr>
   <tr style="text-align:center;">
